PCH: Per-config precompiled headers broken in multi-config generators
With Visual Studio and Xcode the code
target_precompile_headers(foo PRIVATE foo.h "$<$<CONFIG:Debug>:debug.h>")
does not result in debug.h
being included among the precompiled headers in the Debug configuration.
This is because the code here and here uses ""
as the configuration name.
EDIT: The relevant code is now here for PCH and here for unity builds.
Edited by Brad King